fixed spacing issue and added some sample text to desc section

--- a/experience_details/exp.css
+++ b/experience_details/exp.css
@@ -60,3 +60,30 @@ p {
     font-weight: 350;
     font-size: 1.125rem;
 }
+.categories-left h4:first-of-type + p {
+    margin-bottom: 2em; 
+    display: block;
+}
+.categories-right h4:first-of-type + p {
+    margin-bottom: 2em; 
+    display: block;
+}
+.experience-description {
+    width:100%;
+    margin-left: 0;
+}
+
+.experience-description h3 {
+    font-size: 1.5rem;
+    color: #7f9cf5;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+}
+
+.experience-description p {
+    text-indent: 2em;
+    line-height: 1.4;
+    font-size: 1.1rem;
+    color: #e2e8f0;
+    margin-bottom: 2rem;
+}
